--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -5,11 +5,15 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
 
   config.vm.provider "virtualbox" do |v|
-    v.name   = "vagrant-box-ubuntu-develop"
+    v.name   = "vagrant-box-ubuntu-gui"
     v.memory = "1024"
 
     v.customize [
       "modifyvm",        :id,
+      "--vram",          "256",
+      "--clipboard",     "bidirectional",
+      "--draganddrop",   "bidirectional",
+      "--accelerate3d",  "on",
       "--hwvirtex",      "on",
       "--nestedpaging",  "on",
       "--largepages",    "on",
