--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -2,7 +2,7 @@
 ##  vi: set ft=ruby
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/bionic64"
+  config.vm.box = "ubuntu/bionic64-develop"
 
   config.vm.provider "virtualbox" do |v|
     v.name   = "vagrant-box-ubuntu-gui"
