--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
 
   config.vm.provider "virtualbox" do |v|
-    v.name   = "vagrant-box-ubuntu-gui"
+    v.name   = "vagrant-box-ubuntu-libreoffice"
     v.memory = "1024"
 
     v.customize [
